set up HTML and App.vue

--- a/index.html
+++ b/index.html
@@ -5,6 +5,19 @@
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vite App</title>
+
+    <script src="https://kit.fontawesome.com/0a071592ba.js" crossorigin="anonymous"></script>
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="white-translucent">
+    <!--
+    https://stackoverflow.com/questions/19729700/how-to-set-the-status-bar-color-in-an-ios-7-web-app
+    #A5D896 -->
+
+    <!-- https://medium.com/@sam20gh/how-to-add-add-to-home-screen-to-your-website-4b07aee02676  -->
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="theme-color" content="#ffffff">
+
+
   </head>
   <body>
     <div id="app"></div>
