--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
 
   </head>
   <body>
-    <div id="app"></div>
+    <main>
+      <div id="app"></div>
+    </main>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
